--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "blindfish-simple-web",
+  "name": "spider-monkey",
   "version": "0.0.1",
-  "description": "dev setup for simple web pages",
+  "description": "A web development environment for dabblers",
   "main": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
