--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spider-monkey",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "A web development environment for dabblers",
   "main": "",
   "scripts": {
@@ -9,17 +9,23 @@
   "author": "ben@blindfish.co.uk",
   "license": "MIT",
   "devDependencies": {
-    "vinyl-source-stream": "^1.1.0",
-    "browser-sync": "^2.11.1",
-    "del": "^2.2.0",
-    "jshint": "^2.9.1",
-    "jshint-stylish": "^2.1.0",
-    "node-sass": "^3.4.2",
-    "gulp": "^3.9.1",
-    "gulp-changed": "^1.3.0",
-    "gulp-jade": "^1.1.0",
-    "gulp-jshint": "^2.0.0",
-    "gulp-sass": "^2.2.0",
-    "gulp-sourcemaps": "^1.6.0"
+      "browser-sync": "^2.11.1",
+      "browserify": "^13.0.0",
+      "del": "^2.2.0",
+      "event-stream": "^3.3.2",
+      "glob": "^7.0.0",
+      "gulp": "^3.9.1",
+      "gulp-changed": "^1.3.0",
+      "gulp-jade": "^1.1.0",
+      "gulp-jshint": "^2.0.0",
+      "gulp-notify": "^2.2.0",
+      "gulp-rename": "^1.2.2",
+      "gulp-sass": "^2.2.0",
+      "gulp-sourcemaps": "^1.6.0",
+      "gulp-util": "^3.0.7",
+      "jshint": "^2.9.1",
+      "jshint-stylish": "^2.1.0",
+      "node-sass": "^3.4.2",
+      "vinyl-source-stream": "^1.1.0"
   }
 }
