--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
   },
   "author": "ben@blindfish.co.uk",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/blindfish3/spider-monkey.git"
+  },
   "devDependencies": {
     "browser-sync": "^2.11.1",
     "browserify": "^13.0.0",
@@ -22,10 +26,12 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.2.0",
     "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
     "jshint": "^2.9.1",
     "jshint-stylish": "^2.1.0",
     "node-sass": "^3.4.2",
+    "utils-merge": "^1.0.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   }
